<resources>
    <string name="app_name">CMMS</string>
    <string name="login_hint">Email</string>
    <string name="password_hint">Hasło</string>
    <string name="btn_login">Zaloguj</string>
    <string name="error_invalid_email">Błędny format email</string>
    <string name="status_new">NOWE</string>
    <string name="status_in_progress">W TOKU</string>
    <string name="status_completed">GOTOWE</string>

    <string name="dashboard_title">Dashboard Statystyki</string>
    <string name="offline_mode">Tryb offline</string>
    <string name="connection_restored">Połączenie przywrócone</string>
    <string name="label_open_jobs">Otwarte zlecenia</string>
    <string name="label_critical_jobs">Krytyczne awarie</string>
    <string name="label_upcoming_maintenance">Nadchodzące przeglądy</string>

    <string name="dummy_count_12">12</string>
    <string name="dummy_count_3">3</string>
    <string name="dummy_count_8">8</string>

    <string name="title_machines">Lista maszyn</string>
    <string name="search_hint">Wyszukaj po nazwie...</string>
    <string name="empty_list_message">Brak maszyn do wyświetlenia</string>
    <string name="machine_serial_label">S/N: </string>

    <string name="error_empty_field">To pole nie może być puste</string>
    <string name="error_wrong_credentials">Błędny email lub hasło</string>

    <string name="label_recent_jobs">Ostatnie zlecenia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_dashboard">Panel</string>
    <string name="nav_machines">Maszyny</string>
    <string name="nav_work_orders">Zlecenia</string>
    <string name="nav_notifications">Powiadomienia</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_label_machine_details">Szczegóły maszyny</string>
    <string name="nav_label_work_order_details">Szczegóły zlecenia</string>

    <string name="login_welcome">Witaj z powrotem</string>
    <string name="login_subtitle">Zaloguj się, aby kontynuować</string>

    <string name="title_work_orders">Zlecenia</string>
    <string name="chip_filter_all">Wszystkie</string>
    <string name="chip_filter_new">Nowe</string>
    <string name="chip_filter_in_progress">W toku</string>
    <string name="chip_filter_completed">Gotowe</string>

    <string name="label_serial_number">Numer seryjny</string>
    <string name="label_location">Lokalizacja</string>
    <string name="label_working_hours">Godziny pracy</string>
    <string name="label_status">Status</string>
    <string name="label_priority">Priorytet</string>
    <string name="label_description">Opis</string>
    <string name="label_machine">Maszyna</string>
    <string name="label_technician">Technik</string>
    <string name="label_parts">Części</string>
    <string name="label_priority_prefix">Priorytet: </string>
    <string name="empty_notifications">Brak powiadomień</string>
    <string name="btn_logout">Wyloguj</string>
    <string name="label_certificates">Certyfikaty</string>
    <string name="label_no_certificates">Brak certyfikatów</string>

    <string name="title_add_machine">Nowa maszyna</string>
    <string name="title_add_work_order">Nowe zlecenie</string>
    <string name="hint_machine_name">Nazwa maszyny</string>
    <string name="hint_wo_title">Tytuł zlecenia</string>
    <string name="btn_save">Zapisz</string>
    <string name="msg_machine_added">Maszyna została dodana</string>
    <string name="msg_work_order_added">Zlecenie zostało dodane</string>
    <string name="msg_status_updated">Status został zmieniony</string>
    <string name="label_bhp_confirmed">Potwierdzenie BHP</string>
    <string name="priority_low">Niski</string>
    <string name="priority_medium">Średni</string>
    <string name="priority_high">Wysoki</string>
    <string name="priority_critical">Krytyczny</string>
    <string name="label_change_status">Zmień status</string>
    <string name="btn_start_work">Rozpocznij pracę</string>
    <string name="btn_complete">Zakończ</string>
    <string name="hint_purchase_date">Data zakupu</string>
    <string name="hint_purchase_price">Cena zakupu</string>
    <string name="error_select_location">Wybierz lokalizację</string>
    <string name="error_select_machine">Wybierz maszynę</string>
    <string name="error_title_min">Tytuł musi mieć co najmniej 3 znaki</string>
    <string name="error_description_min">Opis musi mieć co najmniej 10 znaków</string>

    <string name="btn_edit">Edytuj</string>
    <string name="btn_delete">Usuń</string>
    <string name="msg_machine_updated">Maszyna została zaktualizowana</string>
    <string name="msg_machine_deleted">Maszyna została usunięta</string>
    <string name="msg_work_order_updated">Zlecenie zostało zaktualizowane</string>
    <string name="title_edit_machine">Edytuj maszynę</string>
    <string name="title_edit_work_order">Edytuj zlecenie</string>
    <string name="dialog_delete_title">Potwierdź usunięcie</string>
    <string name="dialog_delete_machine_message">Czy na pewno chcesz usunąć tę maszynę?</string>
    <string name="btn_cancel">Anuluj</string>
    <string name="error_no_permission">Brak uprawnień do tej operacji</string>
    <string name="cert_valid">Ważny</string>
    <string name="cert_expired">Nieważny</string>
    <string name="label_update_hours">Aktualizuj godziny pracy</string>
    <string name="hint_operating_hours">Godziny pracy</string>
    <string name="btn_update_hours">Zapisz godziny</string>
    <string name="msg_hours_updated">Godziny pracy zostały zaktualizowane</string>
    <string name="label_assign_technician">Przypisz technika</string>
    <string name="hint_select_technician">Wybierz technika…</string>
    <string name="btn_assign">Przypisz</string>
    <string name="msg_technician_assigned">Technik został przypisany</string>
    <string name="label_add_parts">Dodaj części</string>
    <string name="hint_select_part">Wybierz część z magazynu…</string>
    <string name="hint_quantity">Ilość</string>
    <string name="btn_add_part">Dodaj</string>
    <string name="msg_part_added">Część została dodana</string>
    <string name="label_used_parts">Użyte części</string>
    <string name="error_no_stock">Brak wystarczającej ilości w magazynie</string>
</resources>